--- a/serval-run.css
+++ b/serval-run.css
@@ -27,6 +27,34 @@
   }
 }
 
+@keyframes peeking-locate-portrait {
+  0% {
+    left: 0px;
+    right: unset;
+    top: unset;
+    bottom: 0px;
+    transform: matrix(0,-1,-1,0,30,105);
+  }
+  25% {
+    left: unset;
+    right: 0px;
+    transform: matrix(0,-1,1,0,-30,105);
+  }
+  50% {
+    top: 0px;
+    bottom: unset;
+    right: 0px;
+    transform: matrix(0,1,1,0,-30,-105);
+  }
+  75% {
+    top: 0px;
+    bottom: unset;
+    left: 0px;
+    right: unset;
+    transform: matrix(0,1,-1,0,30,-105);
+  }
+}
+
 @keyframes peeking-run {
   0% {
     transform: translateX(-100%);
@@ -39,7 +67,22 @@
   }
 }
 
+@keyframes peeking-run-portrait {
+  0% {
+    transform: translateX(-100%);
+  }
+  60% {
+    transform: translateX(200%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 @keyframes peeking-turn {
+  0% {
+    transform: rotate3d(0,0,0,180deg);
+  }
   30% { /*start turn*/
     transform: rotate3d(0,0,0,180deg);
   }
@@ -57,28 +100,56 @@
   }
 }
 
-.serval-pop {
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
-  animation: peeking-locate 8s infinite step-end;
-  transform: translate(-40%, 30%);
+@media screen and (orientation: landscape){
+  .serval-pop {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    animation: peeking-locate 8s infinite step-end;
+    transform: translate(-40%, 30%);
+  }
+
+  .serval-pop .serval-run {
+    display: flex;
+    display: -webkit-flex;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
+
+    align-items: flex-start;
+    width: 300px;
+    animation: peeking-run 2s infinite ease-in-out;
+  }
+
+  .serval-pop .serval-run img {
+    width: 100%;
+    animation: peeking-turn 2s infinite ease;
+  }
 }
 
-.serval-pop .serval-run {
-  display: flex;
-  display: -webkit-flex;
-  -moz-box-flex: 1;
-  -webkit-box-flex: 1;
+@media screen and (orientation: portrait){
+  .serval-pop {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    animation: peeking-locate-portrait 8s infinite step-end;
+    transform: matrix(0,-1,-1,0,120,135);
+  }
 
-  align-items: flex-start;
-  width: 300px;
-  animation: peeking-run 2s infinite ease-in-out;
-}
+  .serval-pop .serval-run {
+    display: flex;
+    display: -webkit-flex;
+    -moz-box-flex: 1;
+    -webkit-box-flex: 1;
 
-.serval-pop .serval-run img {
-  width: 100%;
-  animation: peeking-turn 2s infinite ease;
+    align-items: flex-start;
+    width: 150px;
+    animation: peeking-run-portrait 2s infinite ease-in-out;
+  }
+
+  .serval-pop .serval-run img {
+    width: 100%;
+    animation: peeking-turn 2s infinite ease;
+  }
 }
 
 .serval-run::before {
