--- a/serval-cat.css
+++ b/serval-cat.css
@@ -10,6 +10,13 @@ body {
 
 h1 { margin: 0; }
 
+a, a:visited {
+  color: inherit;
+  text-decoration: none;
+}
+
+ul { list-style: none; }
+
 .vid {
   position: fixed;
   left: 0;
@@ -68,6 +75,23 @@ section:hover {
   justify-content: flex-end;
   align-items: center;
   font-size: 0.8em;
+}
+
+footer ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+footer li {
+  border: rgba(10, 10, 10, 0.5) 1px solid;
+  border-radius: 0.5em;
+  padding: 0.2em 1em;
+}
+
+footer li:hover {
+  background-color: rgba(10, 10, 10, 0.5);
+  color: white;
 }
 
 @media screen and (orientation: landscape) {
