--- a/serval-run.css
+++ b/serval-run.css
@@ -33,25 +33,25 @@
     right: unset;
     top: unset;
     bottom: 0px;
-    transform: matrix(0,-1,-1,0,30,105);
+    transform: matrix(0,-1,-1,0,-30,105);
   }
   25% {
     left: unset;
     right: 0px;
-    transform: matrix(0,-1,1,0,-30,105);
+    transform: matrix(0,-1,1,0,30,105);
   }
   50% {
     top: 0px;
     bottom: unset;
     right: 0px;
-    transform: matrix(0,1,1,0,-30,-105);
+    transform: matrix(0,1,1,0,30,-105);
   }
   75% {
     top: 0px;
     bottom: unset;
     left: 0px;
     right: unset;
-    transform: matrix(0,1,-1,0,30,-105);
+    transform: matrix(0,1,-1,0,-30,-105);
   }
 }
 
