--- a/serval-cat.css
+++ b/serval-cat.css
@@ -51,10 +51,11 @@ header a {
   margin: 0 auto;
 }
 
-.lol, .hunting { display: flex;}
-
-section:hover {
-  background-color: rgba(255, 255, 255, 0.5);
+.lol, .hunting {
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.8);
+  align-items: center;
+  padding: 0.25em;
 }
 
 .description {
