--- a/serval-run.css
+++ b/serval-run.css
@@ -159,7 +159,9 @@
   top: -1em;
   content: 'たのしー';
   padding: 0.2em 0.3em;
+  width: 5em;
   background-color: gold;
   color: green;
   border-radius: 0.3em;
+  text-align: center;
 }
