--- a/serval-cat.css
+++ b/serval-cat.css
@@ -84,13 +84,13 @@ footer ul{
   justify-content: space-around;
 }
 
-footer li {
+footer li span{
   border: rgba(10, 10, 10, 0.5) 1px solid;
   border-radius: 0.5em;
   padding: 0.2em 1em;
 }
 
-footer li:hover {
+footer li span:hover {
   background-color: rgba(10, 10, 10, 0.5);
   color: white;
 }
